--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
         <div class="col-1"></div>
       </div>
     </div>
+    <h5>
+      <a href="https://github.com/Amiioldham/AO-weather-app">Open-source code</a
+      >by Amii Oldham
+    </h5>
     <script src="src/index.js"></script>
   </body>
 </html>
