Added CSS styling to github link

--- a/index.html
+++ b/index.html
@@ -94,10 +94,12 @@
         <div class="col-1"></div>
       </div>
     </div>
-    <h5>
-      <a href="https://github.com/Amiioldham/AO-weather-app">Open-source code</a
-      >by Amii Oldham
-    </h5>
+    <h7 class="github-link">
+      <a href="https://github.com/Amiioldham/AO-weather-app"
+        >Open-source code</a
+      >
+      by Amii Oldham</h7
+    >
     <script src="src/index.js"></script>
   </body>
 </html>
