--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
     </div>
     <h7 class="github-link">
-      <a href="https://github.com/Amiioldham/AO-weather-app"
+      <a href="https://github.com/Amiioldham/AO-weather-app" target="_blank"
         >Open-source code</a
       >
       by Amii Oldham</h7
