Updated main weather icon display JS

--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
           </h3>
           <div class="card">
               <h2 class="card-title">
-                <i class="fas fa-cloud-sun cloud-sun-icon"></i>
-                <span id="description"></span>
+                <img src="" alt="Weather icon" id="main-icon"></i><span id="description"></span>
               </h2>
               <p class="humidity">Humidity: <span id="humidity"></span>%</p>
               <p class="windspeed">Wind Speed: <span id="windspeed"></span>mph</p>
