Updated card details img alt and wind speed

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
           </h3>
           <div class="card">
               <h2 class="card-title">
-                <img src="" alt="Weather icon" id="main-icon"></i><span id="description"></span>
+                <img src="" alt="" id="main-icon"></i><span id="description"></span>
               </h2>
               <p class="humidity">Humidity: <span id="humidity"></span>%</p>
-              <p class="windspeed">Wind Speed: <span id="windspeed"></span>mph</p>
+              <p class="windspeed">Wind Speed: <span id="windspeed"></span>km/h</p>
           </div>
 
         </div>
