--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
           <h1 id="city-name-display"></h1>
           <h3 id="live-day-time"></h3>
           <h3>
+            <div class="temperatureDisplay">
             <span class="temperature" id="temperature"></span>
             <span class="units">
-              <a href="#" id="celcius-link">°C</a> |
+              <a href="#" id="celcius-link" class="active">°C</a> |
               <a href="#" id="fahrenheit-link">°F</a>
             </span>
+          </div>
           </h3>
           <div class="card">
               <h2 class="card-title">
