Condensed CSS and set up basic forecast JS

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <div class="col-1"></div>
         <div class="col-5">
           <h1 id="city-name-display"></h1>
-          <h3 id="live-day-time"></h3>
+          <h3 class="live-day-time" id="live-day-time"></h3>
           <h3>
-            <div class="temperatureDisplay">
+            <div class="temperature-display">
             <span class="temperature" id="temperature"></span>
             <span class="units">
               <a href="#" id="celcius-link" class="active">°C</a> |
@@ -62,27 +62,7 @@
         </div>
         <div class="col-1"></div>
         <div class="col-4">
-          <ul class="forecast">
-            <li class="list-group-item">
-              <i class="fas fa-sun sun-icon"></i> Monday 16°C
-            </li>
-            <br />
-            <li class="list-group-item">
-              <i class="fas fa-cloud-sun cloud-sun-icon"></i> Tuesday 12°C
-            </li>
-            <br />
-            <li class="list-group-item">
-              <i class="fas fa-cloud cloud-icon"></i> Wednesday 11°C
-            </li>
-            <br />
-            <li class="list-group-item">
-              <i class="fas fa-sun sun-icon"></i> Thursday 16°C
-            </li>
-            <br />
-            <li class="list-group-item">
-              <i class="fas fa-cloud-sun cloud-sun-icon"></i> Friday 17°C
-            </li>
-          </ul>
+          <div class="forecast"></div>
         </div>
         <div class="col-1"></div>
       </div>
