Created JS forecast array and re-designed forecast CSS

--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
 
         </div>
         <div class="col-1"></div>
-        <div class="col-4">
-          <div class="forecast"></div>
-        </div>
+        <div class="col-4" id="forecast"></div>
         <div class="col-1"></div>
       </div>
     </div>
