Final CSS edits

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="col-1"></div>
         <div class="col-5">
           <h1 id="city-name-display"></h1>
-          <h3 class="live-day-time" id="live-day-time">Last updated: </h3>
+          <h3 class="live-day-time" id="live-day-time"></h3>
           <h3>
             <div class="temperature-display">
             <span class="temperature" id="temperature"></span>
@@ -56,7 +56,7 @@
                 <img src="" alt="" id="main-icon"></i><span id="description"></span>
               </h2>
               <p class="humidity">Humidity: <span id="humidity"></span>%</p>
-              <p class="windspeed">Wind Speed: <span id="windspeed"></span>km/h</p>
+              <p class="windspeed">Wind Speed: <span id="windspeed"></span>m/h</p>
           </div>
 
         </div>
